Allow overflow in all '.card' for dropdown menus fixes #3

--- a/app/client/templates/common/common.css
+++ b/app/client/templates/common/common.css
@@ -1,4 +1,8 @@
 /* Anything here should be applied to all pages */
+.card {
+	overflow: visible;
+}
+
 
 /* Only affects screen widths <= 600px */
 @media only screen and (max-width: 600px) {
